--- a/index.html
+++ b/index.html
@@ -8,10 +8,66 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <link rel="stylesheet" href="./styles/main.css">
+
+    <title>Nikhal Singh</title>
+    <link rel="icon" href="./imgs/avtar.png" type = "images/png">
   </head>
   <body>
-    <h1>Hello, world!</h1>
+
+    <section class="home">
+
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="index.html">My <span style="color: red;"> Portfolio</span></a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="about.html">Know Me</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="projects.html">My Projects</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="contact.html">Contact</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
+
+
+    <div class="intro">
+      <h1>Nikhal Singh</h1>
+      <hr align="left" size="5">
+      <h3><span style="font-family:'Brush Script MT', cursive;">Computer Programmer</span></h3>
+      <br>
+
+      <p class="text">
+        Hi there..!! Welcome to my web page. Thank you for landing here. My name is Nikhal 
+        Singh, I'm currently a 4th year student persuing Bachelor's degree from Thapar Institute of Technology. I love to learn new technologies.
+        I am also interested in Research field of ML/DL/NLP.
+        In case you want to contact me for any reason. I've added contact details in the contact page.
+      <br>
+      Thank You.
+      </p>
+
+
+      <br>
+      <button type="button" class="btn btn-info">Explore</button>
+
+    </div>
+    
+
+
+
+    </section>
+
+
+
 
     <!-- Optional JavaScript; choose one of the two! -->
 
