--- a/about.html
+++ b/about.html
@@ -34,7 +34,18 @@
       </div>
     </nav>
 
-    <h1>Who I am</h1>
+    <div class="card" style="width: 40rem; margin: 10% auto;">
+      <img src="./imgs/pic.jpg" class="card-img-top" style="width: 50%; margin: 10px auto;">
+      <div class="card-body">
+        <h1 class="card-title">Nikhal Singh</h1>
+        <p class="card-text">
+          <b>Hey there.</b><br>
+          A fourth-year undegraduate pursuing a Bachelor's Degree in Computer Science & Engineering. Interested in Software 
+          Development and in the field of AI and Deep Learning.
+        </p>
+        <a href="./cv/Resume'.pdf" class="btn btn-primary">Download My Résumé</a>
+      </div>
+    </div>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
