--- a/projects.html
+++ b/projects.html
@@ -8,10 +8,13 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>My Project</title>
     <link rel="icon" href="./imgs/projects.png" type="images/png">
   </head>
   <body>
+
+    <script type="text/javascript" src="./js/jquery.js"></script>
+
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
@@ -34,7 +37,90 @@
         </div>
       </div>
     </nav>
-    <h1>This is projects page.</h1>
+    
+    <div class="container p-4">
+      <h1 class="alert alert-info text-center">
+        My Projects
+        </h1>
+
+    <div class="row">
+      <div class="col-sm-6">
+        <div class="card">
+          <div class="card-body">
+            <img src="./imgs/face_recog.jpeg" style="width: 50%;">
+            <h2 class="card-title">Face Recognition</h2>
+            <p class="card-text" style="text-align: justify;">Using Machine Learning I created a Face Recognition Project.</p>
+            <form onclick="newtab()">
+            <a href="projects.html" class="btn btn-primary">Github Link</a>
+            </form>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-6">
+        <div class="card">
+          <div class="card-body">
+            <img src="./imgs/credit.png" style="width: 50%;">
+            <h2 class="card-title">Credit Card Fraud Detection</h2>
+            <p class="card-text" style="text-align: justify;">Developed this project using Deep Learning and Machine Learning Algorithms.</p>
+            <br>
+            <br>
+            <form onclick="newtab()">
+            <a href="projects.html" class="btn btn-primary">Github Link</a>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+    <div class="row">
+      <div class="col-sm-6">
+        <div class="card">
+          <div class="card-body">
+            <img src="./imgs/cache.jpg" style="width: 50%;">
+            <h2 class="card-title">LRU-Cache </h2>
+            <p class="card-text" style="text-align: justify;">Created this project using C++ data structures (Doubly Linked List and Hash Map).</p>
+            <br>
+            <br>
+            <form onclick="newtab()">
+            <a href="projects.html" class="btn btn-primary">Github Link</a>
+            </form>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-6">
+        <div class="card">
+          <div class="card-body">
+            <img src="./imgs/imdb.jpg" style="width: 50%;">
+            <h2 class="card-title">IMDb Movie Rating Prediction</h2>
+            <p class="card-text" style="text-align: justify;">Using Sentiment Analysis I created this project.</p>
+            <br>
+            <form onclick="newtab()">
+            <a href="projects.html" class="btn btn-primary">Github Link</a>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+
+
+
+
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
 
     <!-- Optional JavaScript; choose one of the two! -->
 
