update projects file

--- a/projects.html
+++ b/projects.html
@@ -50,7 +50,7 @@
             <img src="./imgs/face_recog.jpeg" style="width: 50%;">
             <h2 class="card-title">Face Recognition</h2>
             <p class="card-text" style="text-align: justify;">Using Machine Learning I created a Face Recognition Project.</p>
-            <form onclick="newtab()">
+            <form onclick="newtab1()">
             <a href="projects.html" class="btn btn-primary">Github Link</a>
             </form>
           </div>
@@ -64,7 +64,7 @@
             <p class="card-text" style="text-align: justify;">Developed this project using Deep Learning and Machine Learning Algorithms.</p>
             <br>
             <br>
-            <form onclick="newtab()">
+            <form onclick="newtab2()">
             <a href="projects.html" class="btn btn-primary">Github Link</a>
             </form>
           </div>
@@ -82,7 +82,7 @@
             <p class="card-text" style="text-align: justify;">Created this project using C++ data structures (Doubly Linked List and Hash Map).</p>
             <br>
             <br>
-            <form onclick="newtab()">
+            <form onclick="newtab3()">
             <a href="projects.html" class="btn btn-primary">Github Link</a>
             </form>
           </div>
@@ -95,7 +95,7 @@
             <h2 class="card-title">IMDb Movie Rating Prediction</h2>
             <p class="card-text" style="text-align: justify;">Using Sentiment Analysis I created this project.</p>
             <br>
-            <form onclick="newtab()">
+            <form onclick="newtab4()">
             <a href="projects.html" class="btn btn-primary">Github Link</a>
             </form>
           </div>
